welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: not found: value brown
faireV(brown); 
       ^